--- a/src/main/resources/templates/PINK1PRKN14.html
+++ b/src/main/resources/templates/PINK1PRKN14.html
@@ -527,13 +527,13 @@ $("#backToLanding").click(function(){
 		<ul class="listing core-radio move-up-yes-no move-down-yes-no">
             <li>
                 <label style="margin-left:10px;">
-                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_pdmed}" type="radio" name1="biom_pdmed" value="1"  onchange="__main__(); minimum_part_filled_out(); " />
+                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_pdmed}" type="radio" name1="biom_pdmed" value="0"  onchange="__main__(); minimum_part_filled_out(); " />
                   <span class="padding-8" style="margin-left:5px;">Yes</span>   
 				 </label>
             </li>
             <li>
                 <label style="margin-left:10px;">
-                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_pdmed}" type="radio" name1="biom_pdmed" value="2"  onchange="__main__(); minimum_part_filled_out(); " />
+                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_pdmed}" type="radio" name1="biom_pdmed" value="1"  onchange="__main__(); minimum_part_filled_out(); " />
                   <span class="padding-8" style="margin-left:5px;"> No</span>   
 				 </label>
             </li>
@@ -764,8 +764,8 @@ $("#backToLanding").click(function(){
             </li>
             <li>
                 <label style="margin-left:10px;">
-                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_urine}" type="radio" name1="biom_urine" value="3"  onchange="__main__(); minimum_part_filled_out(); " />
-                  <span class="padding-8" style="margin-left:5px;"> smaller amount collected</span>   
+                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_urine}" type="radio" name1="biom_urine" value="2"  onchange="__main__(); minimum_part_filled_out(); " />
+                  <span class="padding-8" style="margin-left:5px;"> Collected, unable to process/ship</span>
 				 </label>
             </li>
 		</ul>
@@ -1002,8 +1002,8 @@ $("#backToLanding").click(function(){
             </li>
             <li>
                 <label style="margin-left:10px;">
-                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_edta}" type="radio" name1="biom_edta" value="3"  onchange="__main__(); minimum_part_filled_out(); " />
-                  <span class="padding-8" style="margin-left:5px;"> smaller amount collected</span>   
+                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_edta}" type="radio" name1="biom_edta" value="2"  onchange="__main__(); minimum_part_filled_out(); " />
+                  <span class="padding-8" style="margin-left:5px;"> Collected, unable to process/ship</span>
 				 </label>
             </li>
 		</ul>
@@ -1450,8 +1450,8 @@ $("#backToLanding").click(function(){
             </li>
             <li>
                 <label style="margin-left:10px;">
-                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_plasma}" type="radio" name1="biom_plasma" value="3"  onchange="__main__(); minimum_part_filled_out(); " />
-                  <span class="padding-8" style="margin-left:5px;"> smaller amount collected</span>   
+                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_plasma}" type="radio" name1="biom_plasma" value="2"  onchange="__main__(); minimum_part_filled_out(); " />
+                  <span class="padding-8" style="margin-left:5px;"> Collected, unable to process/ship</span>
 				 </label>
             </li>
 		</ul>
@@ -1898,8 +1898,8 @@ $("#backToLanding").click(function(){
             </li>
             <li>
                 <label style="margin-left:10px;">
-                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_serum}" type="radio" name1="biom_serum" value="3"  onchange="__main__(); minimum_part_filled_out(); " />
-                  <span class="padding-8" style="margin-left:5px;"> smaller amount collected</span>   
+                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_serum}" type="radio" name1="biom_serum" value="2"  onchange="__main__(); minimum_part_filled_out(); " />
+                  <span class="padding-8" style="margin-left:5px;"> Collected, unable to process/ship</span>
 				 </label>
             </li>
 		</ul>
@@ -2346,8 +2346,8 @@ $("#backToLanding").click(function(){
             </li>
             <li>
                 <label style="margin-left:10px;">
-                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_pax}" type="radio" name1="biom_pax" value="3"  onchange="__main__(); minimum_part_filled_out(); " />
-                  <span class="padding-8" style="margin-left:5px;"> smaller amount collected</span>   
+                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_pax}" type="radio" name1="biom_pax" value="2"  onchange="__main__(); minimum_part_filled_out(); " />
+                  <span class="padding-8" style="margin-left:5px;"> Collected, unable to process/ship</span>
 				 </label>
             </li>
 		</ul>
@@ -2794,8 +2794,8 @@ $("#backToLanding").click(function(){
             </li>
             <li>
                 <label style="margin-left:10px;">
-                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_pbmcs}" type="radio" name1="biom_pbmcs" value="3"  onchange="__main__(); minimum_part_filled_out(); " />
-                  <span class="padding-8" style="margin-left:5px;"> smaller amount collected</span>   
+                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_pbmcs}" type="radio" name1="biom_pbmcs" value="2"  onchange="__main__(); minimum_part_filled_out(); " />
+                  <span class="padding-8" style="margin-left:5px;"> Collected, unable to process/ship</span>
 				 </label>
             </li>
 		</ul>
