--- a/src/main/resources/templates/PINK1PRKN15.html
+++ b/src/main/resources/templates/PINK1PRKN15.html
@@ -395,7 +395,7 @@ $("#backToLanding").click(function(){
             <li>
                 <label style="margin-left:10px;">
                   <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_csf_iss}" type="radio" name1="biom_csf_iss" value="4"  onchange="__main__(); minimum_part_filled_out(); " />
-                  <span class="padding-8" style="margin-left:5px;"> adverse events associated with prior lumbar punctures)</span>   
+                  <span class="padding-8" style="margin-left:5px;"> History of difficulty obtaining LP (e.g., participant unable to tolerate procedure in the past, adverse events associated with prior lumbar punctures)</span>
 				 </label>
             </li>
             <li>
@@ -412,7 +412,7 @@ $("#backToLanding").click(function(){
             </li>
             <li>
                 <label style="margin-left:10px;">
-                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_csf_iss}" type="radio" name1="biom_csf_iss" value="7"  onchange="__main__(); minimum_part_filled_out(); " />
+                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_csf_iss}" type="radio" name1="biom_csf_iss" value="10"  onchange="__main__(); minimum_part_filled_out(); " />
                   <span class="padding-8" style="margin-left:5px;"> Other, specify in comments</span>   
 				 </label>
             </li>
@@ -665,7 +665,7 @@ $("#backToLanding").click(function(){
             </li>
             <li>
                 <label style="margin-left:10px;">
-                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_csf_pdmed}" type="radio" name1="biom_csf_pdmed" value="2"  onchange="__main__(); minimum_part_filled_out(); " />
+                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_csf_pdmed}" type="radio" name1="biom_csf_pdmed" value="0"  onchange="__main__(); minimum_part_filled_out(); " />
                   <span class="padding-8" style="margin-left:5px;"> No</span>   
 				 </label>
             </li>
@@ -958,31 +958,31 @@ $("#backToLanding").click(function(){
 		<ul class="listing core-radio move-up-yes-no move-down-yes-no">
             <li>
                 <label style="margin-left:10px;">
-                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_csf_loc}" type="radio" name1="biom_csf_loc" value="0"  onchange="__main__(); minimum_part_filled_out(); " />
+                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_csf_loc}" type="radio" name1="biom_csf_loc" value="1"  onchange="__main__(); minimum_part_filled_out(); " />
                   <span class="padding-8" style="margin-left:5px;">L2-L3 Interspace</span>   
 				 </label>
             </li>
             <li>
                 <label style="margin-left:10px;">
-                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_csf_loc}" type="radio" name1="biom_csf_loc" value="1"  onchange="__main__(); minimum_part_filled_out(); " />
+                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_csf_loc}" type="radio" name1="biom_csf_loc" value="2"  onchange="__main__(); minimum_part_filled_out(); " />
                   <span class="padding-8" style="margin-left:5px;"> L3-L4 Interspace</span>   
 				 </label>
             </li>
             <li>
                 <label style="margin-left:10px;">
-                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_csf_loc}" type="radio" name1="biom_csf_loc" value="2"  onchange="__main__(); minimum_part_filled_out(); " />
+                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_csf_loc}" type="radio" name1="biom_csf_loc" value="3"  onchange="__main__(); minimum_part_filled_out(); " />
                   <span class="padding-8" style="margin-left:5px;"> L4-L5 Interspace</span>   
 				 </label>
             </li>
             <li>
                 <label style="margin-left:10px;">
-                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_csf_loc}" type="radio" name1="biom_csf_loc" value="3"  onchange="__main__(); minimum_part_filled_out(); " />
+                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_csf_loc}" type="radio" name1="biom_csf_loc" value="4"  onchange="__main__(); minimum_part_filled_out(); " />
                   <span class="padding-8" style="margin-left:5px;"> L5-S1 Interspace</span>   
 				 </label>
             </li>
             <li>
                 <label style="margin-left:10px;">
-                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_csf_loc}" type="radio" name1="biom_csf_loc" value="4 "  onchange="__main__(); minimum_part_filled_out(); " />
+                  <input style="margin-left:5px;opacity:100!important;" th:field="${formObj.Biom_csf_loc}" type="radio" name1="biom_csf_loc" value="5"  onchange="__main__(); minimum_part_filled_out(); " />
                   <span class="padding-8" style="margin-left:5px;"> Unknown</span>   
 				 </label>
             </li>
