--- a/src/main/resources/templates/PINK1PRKN120.html
+++ b/src/main/resources/templates/PINK1PRKN120.html
@@ -316,6 +316,7 @@ $("#backToLanding").click(function(){
                   <option th:selected="${(formObj.Mdsupdrs_4_ts_d == ' 2 = 26 - 50% of waking day')}" value=' 2 = 26 - 50% of waking day'> 2 = 26 - 50% of waking day</option>
                   <option th:selected="${(formObj.Mdsupdrs_4_ts_d == ' 3 = 51 - 75% of waking day')}" value=' 3 = 51 - 75% of waking day'> 3 = 51 - 75% of waking day</option>
                   <option th:selected="${(formObj.Mdsupdrs_4_ts_d == ' 4 = >75% of waking day.')}" value=' 4 = >75% of waking day.'> 4 = >75% of waking day.</option>
+                  <option th:selected="${(formObj.Mdsupdrs_4_ts_d == ' 101=Unable to Rate.')}" value=' 101=Unable to Rate.'> 101=Unable to Rate.</option>
                 </select>
               </div>
             </div>          </div>
@@ -348,6 +349,7 @@ $("#backToLanding").click(function(){
                   <option th:selected="${(formObj.Mdsupdrs_4_fi_d == ' 2 = Dyskinesias impact on many activities, but the patient usually performs all activities and participates in all social interactions during dyskinetic periods.')}" value=' 2 = Dyskinesias impact on many activities, but the patient usually performs all activities and participates in all social interactions during dyskinetic periods.'> 2 = Dyskinesias impact on many activities, but the patient usually performs all activities and participates in all social interactions during dyskinetic periods.</option>
                   <option th:selected="${(formObj.Mdsupdrs_4_fi_d == ' 3 = Dyskinesias impact on activities to the point that the patient usually does not perform some activities or does not usually participate in some social activities during dyskinetic episodes.')}" value=' 3 = Dyskinesias impact on activities to the point that the patient usually does not perform some activities or does not usually participate in some social activities during dyskinetic episodes.'> 3 = Dyskinesias impact on activities to the point that the patient usually does not perform some activities or does not usually participate in some social activities during dyskinetic episodes.</option>
                   <option th:selected="${(formObj.Mdsupdrs_4_fi_d == ' 4 = Dyskinesias impact on function to the point that the patient usually does not perform most activities or participate in most social interactions during dyskinetic episodes.')}" value=' 4 = Dyskinesias impact on function to the point that the patient usually does not perform most activities or participate in most social interactions during dyskinetic episodes.'> 4 = Dyskinesias impact on function to the point that the patient usually does not perform most activities or participate in most social interactions during dyskinetic episodes.</option>
+                  <option th:selected="${(formObj.Mdsupdrs_4_fi_d == ' 101=Unable to Rate.')}" value=' 101=Unable to Rate.'> 101=Unable to Rate.</option>
                 </select>
               </div>
             </div>          </div>
@@ -386,6 +388,7 @@ $("#backToLanding").click(function(){
                   <option th:selected="${(formObj.Mdsupdrs_4_ts_os == ' 2 = 26 - 50% of waking day.')}" value=' 2 = 26 - 50% of waking day.'> 2 = 26 - 50% of waking day.</option>
                   <option th:selected="${(formObj.Mdsupdrs_4_ts_os == ' 3 = 51 - 75% of waking day.')}" value=' 3 = 51 - 75% of waking day.'> 3 = 51 - 75% of waking day.</option>
                   <option th:selected="${(formObj.Mdsupdrs_4_ts_os == ' 4 = >75% of waking day')}" value=' 4 = >75% of waking day'> 4 = >75% of waking day</option>
+                  <option th:selected="${(formObj.Mdsupdrs_4_ts_os == ' 101=Unable to Rate.')}" value=' 101=Unable to Rate.'> 101=Unable to Rate.</option>
                 </select>
               </div>
             </div>          </div>
@@ -418,6 +421,7 @@ $("#backToLanding").click(function(){
                   <option th:selected="${(formObj.Mdsupdrs_4_fi_f == ' 2 = Fluctuations impact many activities, but during OFF, the patient still usually performs all activities and participates in all social interactions that typically occur during the ON state.')}" value=' 2 = Fluctuations impact many activities, but during OFF, the patient still usually performs all activities and participates in all social interactions that typically occur during the ON state.'> 2 = Fluctuations impact many activities, but during OFF, the patient still usually performs all activities and participates in all social interactions that typically occur during the ON state.</option>
                   <option th:selected="${(formObj.Mdsupdrs_4_fi_f == ' 3 = Fluctuations impact on the performance of activities during OFF to the point that the patient usually does not perform some activities or participate in some social interactions that are performed during ON periods.')}" value=' 3 = Fluctuations impact on the performance of activities during OFF to the point that the patient usually does not perform some activities or participate in some social interactions that are performed during ON periods.'> 3 = Fluctuations impact on the performance of activities during OFF to the point that the patient usually does not perform some activities or participate in some social interactions that are performed during ON periods.</option>
                   <option th:selected="${(formObj.Mdsupdrs_4_fi_f == ' 4 = Fluctuations impact on function to the point that, during OFF, the patient usually does not perform most activities or participate in most social interactions that are performed during ON periods.')}" value=' 4 = Fluctuations impact on function to the point that, during OFF, the patient usually does not perform most activities or participate in most social interactions that are performed during ON periods.'> 4 = Fluctuations impact on function to the point that, during OFF, the patient usually does not perform most activities or participate in most social interactions that are performed during ON periods.</option>
+                  <option th:selected="${(formObj.Mdsupdrs_4_fi_f == ' 101=Unable to Rate.')}" value=' 101=Unable to Rate.'> 101=Unable to Rate.</option>
                 </select>
               </div>
             </div>          </div>
@@ -450,6 +454,7 @@ $("#backToLanding").click(function(){
                   <option th:selected="${(formObj.Mdsupdrs_4_c_mf == ' 2 = OFF times are predictable most of the time (51-75%).')}" value=' 2 = OFF times are predictable most of the time (51-75%).'> 2 = OFF times are predictable most of the time (51-75%).</option>
                   <option th:selected="${(formObj.Mdsupdrs_4_c_mf == ' 3 = OFF times are predictable some of the time (26-50%).')}" value=' 3 = OFF times are predictable some of the time (26-50%).'> 3 = OFF times are predictable some of the time (26-50%).</option>
                   <option th:selected="${(formObj.Mdsupdrs_4_c_mf == ' 4 = OFF episodes are rarely predictable (&lt;=25%).')}" value=' 4 = OFF episodes are rarely predictable (&lt;=25%).'> 4 = OFF episodes are rarely predictable (&lt;=25%).</option>
+                  <option th:selected="${(formObj.Mdsupdrs_4_c_mf == ' 101=Unable to Rate.')}" value=' 101=Unable to Rate.'> 101=Unable to Rate.</option>
                 </select>
               </div>
             </div>          </div>
@@ -488,6 +493,7 @@ $("#backToLanding").click(function(){
                   <option th:selected="${(formObj.Mdsupdrs_4_posd == ' 2 = 26-50% of time in OFF state.')}" value=' 2 = 26-50% of time in OFF state.'> 2 = 26-50% of time in OFF state.</option>
                   <option th:selected="${(formObj.Mdsupdrs_4_posd == ' 3 = 51-75% of time in OFF state.')}" value=' 3 = 51-75% of time in OFF state.'> 3 = 51-75% of time in OFF state.</option>
                   <option th:selected="${(formObj.Mdsupdrs_4_posd == ' 4 = >75% of time in OFF state')}" value=' 4 = >75% of time in OFF state'> 4 = >75% of time in OFF state</option>
+                  <option th:selected="${(formObj.Mdsupdrs_4_posd == ' 101=Unable to Rate.')}" value=' 101=Unable to Rate.'> 101=Unable to Rate.</option>
                 </select>
               </div>
             </div>          </div>
@@ -505,6 +511,7 @@ $("#backToLanding").click(function(){
                   <option th:selected="${(formObj.Hoehnyahr == ' 3 = Mild to moderate bilateral disease, some postural instability, physically independent')}" value=' 3 = Mild to moderate bilateral disease, some postural instability, physically independent'> 3 = Mild to moderate bilateral disease, some postural instability, physically independent</option>
                   <option th:selected="${(formObj.Hoehnyahr == ' 4 = Severe disability, still able to walk or stand unassisted')}" value=' 4 = Severe disability, still able to walk or stand unassisted'> 4 = Severe disability, still able to walk or stand unassisted</option>
                   <option th:selected="${(formObj.Hoehnyahr == ' 5 = Wheelchair bound or bedridden unless aided')}" value=' 5 = Wheelchair bound or bedridden unless aided'> 5 = Wheelchair bound or bedridden unless aided</option>
+                  <option th:selected="${(formObj.Hoehnyahr == ' 101=Unable to Rate.')}" value=' 101=Unable to Rate.'> 101=Unable to Rate.</option>
                 </select>
               </div>
             </div>          </div>
@@ -514,15 +521,15 @@ $("#backToLanding").click(function(){
                 <label for="sel1" class="">Schwab and England Scale</label>
                 <select class="form-control" id="schwab_engl_adl" th:field="${formObj.Schwab_engl_adl}" onchange="__main__()" >
                   <option th:selected="${(formObj.Schwab_engl_adl == '-')}" value='-'>-</option>
-                  <option th:selected="${(formObj.Schwab_engl_adl == ' 1 = 100%')}" value=' 1 = 100%'> 1 = 100%</option>
-                  <option th:selected="${(formObj.Schwab_engl_adl == ' 2 = 90%')}" value=' 2 = 90%'> 2 = 90%</option>
-                  <option th:selected="${(formObj.Schwab_engl_adl == ' 3 = 80%')}" value=' 3 = 80%'> 3 = 80%</option>
-                  <option th:selected="${(formObj.Schwab_engl_adl == ' 4 = 70%')}" value=' 4 = 70%'> 4 = 70%</option>
-                  <option th:selected="${(formObj.Schwab_engl_adl == ' 5 = 60%')}" value=' 5 = 60%'> 5 = 60%</option>
-                  <option th:selected="${(formObj.Schwab_engl_adl == ' 6 = 50%')}" value=' 6 = 50%'> 6 = 50%</option>
-                  <option th:selected="${(formObj.Schwab_engl_adl == ' 7=  40%')}" value=' 7=  40%'> 7=  40%</option>
-                  <option th:selected="${(formObj.Schwab_engl_adl == ' 8 = 30%')}" value=' 8 = 30%'> 8 = 30%</option>
-                  <option th:selected="${(formObj.Schwab_engl_adl == ' 9 = 20%')}" value=' 9 = 20%'> 9 = 20%</option>
+                  <option th:selected="${(formObj.Schwab_engl_adl == ' 100 = 100%')}" value=' 100 = 100%'> 100 = 100%</option>
+                  <option th:selected="${(formObj.Schwab_engl_adl == ' 90 = 90%')}" value=' 90 = 90%'> 90 = 90%</option>
+                  <option th:selected="${(formObj.Schwab_engl_adl == ' 80 = 80%')}" value=' 80 = 80%'> 80 = 80%</option>
+                  <option th:selected="${(formObj.Schwab_engl_adl == ' 70 = 70%')}" value=' 70 = 70%'> 70 = 70%</option>
+                  <option th:selected="${(formObj.Schwab_engl_adl == ' 60 = 60%')}" value=' 60 = 60%'> 60 = 60%</option>
+                  <option th:selected="${(formObj.Schwab_engl_adl == ' 50 = 50%')}" value=' 50 = 50%'> 50 = 50%</option>
+                  <option th:selected="${(formObj.Schwab_engl_adl == ' 40=  40%')}" value=' 40=  40%'> 40=  40%</option>
+                  <option th:selected="${(formObj.Schwab_engl_adl == ' 30 = 30%')}" value=' 30 = 30%'> 30 = 30%</option>
+                  <option th:selected="${(formObj.Schwab_engl_adl == ' 20 = 20%')}" value=' 20 = 20%'> 20 = 20%</option>
                   <option th:selected="${(formObj.Schwab_engl_adl == ' 10 = 10%')}" value=' 10 = 10%'> 10 = 10%</option>
                   <option th:selected="${(formObj.Schwab_engl_adl == ' 11 = 0%')}" value=' 11 = 0%'> 11 = 0%</option>
                 </select>
