--- a/src/main/resources/templates/survey/trash.html
+++ b/src/main/resources/templates/survey/trash.html
@@ -76,6 +76,13 @@
                                         <p>eCRFs trash</p>
                                     </a>
                                 </li>
+                                <!-- Добавляем пункт для изменения пароля -->
+                                <li class="nav-item">
+                                    <a href="/change-password" class="nav-link">
+                                        <i class="nav-icon fa fa-key"></i>
+                                        <p>Change Password</p>
+                                    </a>
+                                </li>
                                 <li class="nav-item">
                                     <a href="/user/sign_out" class="nav-link">
                                         <i class="nav-icon fa fa-sign-out-alt"></i>
